# droidgear

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_EN.md  package-lock.json  package.json
.github/workflows/: build-artifacts.yml  release.yml
.husky/: pre-commit
docs/developer/: README.md  tui-design.md
locales/: en.json  zh.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/droidgear-core/: Cargo.toml
src-tauri/crates/droidgear-core/src/: channel.rs  codex.rs  factory_settings.rs  json.rs  lib.rs  mcp.rs  openclaw.rs  opencode.rs  paths.rs  sessions.rs  specs.rs  storage.rs
src-tauri/crates/droidgear-core/tests/: channel.rs  characterization.rs  mcp.rs
src-tauri/crates/droidgear-tui/: Cargo.toml
src-tauri/crates/droidgear-tui/src/: app.rs  editor.rs  main.rs  tui.rs  ui.rs
src-tauri/src/: bindings.rs
src-tauri/src/commands/: channel.rs  codex.rs  config.rs  mcp.rs  openclaw.rs  opencode.rs  paths.rs  sessions.rs  specs.rs
src/components/channels/: ChannelDialog.tsx
src/components/codex/: CodexConfigPage.tsx  ProviderCard.tsx
src/components/layout/: MainWindowContent.tsx
src/components/models/: ModelCard.tsx  ModelDialog.test.tsx  ModelDialog.tsx
src/components/openclaw/: OpenClawFeatureList.tsx  ProviderDialog.tsx  SubagentCard.tsx  SubagentDialog.tsx  SubagentsPage.tsx  index.ts
src/components/preferences/: PreferencesDialog.tsx
src/components/preferences/panes/: ModelsPane.tsx
src/lib/: bindings.ts  model-registry-data.json  model-registry.ts
src/store/: codex-store.ts  subagents-store.ts  ui-store.ts
