[package]
name = "droidgear-tui"
version = "0.0.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5"
droidgear-core = { path = "../droidgear-core" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
